Fix spacing between rows

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -15,6 +15,7 @@ $user-image-profile: 50%;
   background:$card-background;
   border: $card-border;
   padding:20px;
+  margin-bottom: 20px;
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
   border-radius: $radius;
